2017_multi_tenancy/scripts/infrastructure.yml
---
apiVersion: "v1"
kind: "List"
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      environment: "infrastructure"
      project: "infinispan"
      version: "9.0.0.CR2"
    name: transactions-repository
  spec:
    replicas: 1
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 20
        intervalSeconds: 20
        timeoutSeconds: 600
        maxUnavailable: 1
        maxSurge: 1
    selector:
      environment: "infrastructure"
      project: "infinispan"
      version: "9.0.0.CR2"
    template:
      metadata:
        labels:
          environment: "infrastructure"
          project: "infinispan"
          version: "9.0.0.CR2"
      spec:
        containers:
        - args:
          - custom/transactions
          - -Djboss.default.jgroups.stack=kubernetes
          image: jboss/infinispan-server:9.0.0.CR2
          imagePullPolicy: Always
          name: infinispan-server
          ports:
          - containerPort: 8181
            protocol: TCP
          - containerPort: 8888
            protocol: TCP
          - containerPort: 9990
            protocol: TCP
          - containerPort: 11211
            protocol: TCP
          - containerPort: 11222
            protocol: TCP
          - containerPort: 57600
            protocol: TCP
          - containerPort: 7600
            protocol: TCP
          - containerPort: 8080
            protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationGracePeriodSeconds: 90
          volumeMounts:
          - mountPath: /opt/jboss/infinispan-server/standalone/configuration/custom
            name: config-volume
          - mountPath: /opt/jboss/infinispan-server/standalone/configuration/default-server-keystore
            name: default-server-keystore-volume
          - mountPath: /opt/jboss/infinispan-server/standalone/configuration/sni-server-keystore
            name: sni-server-keystore-volume
          livenessProbe:
            exec:
              command:
              - /usr/local/bin/is_running.sh
            initialDelaySeconds: 10
            timeoutSeconds: 80
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
             exec:
                command:
                - /usr/local/bin/is_healthy.sh
             initialDelaySeconds: 10
             timeoutSeconds: 40
             periodSeconds: 30
             successThreshold: 2
             failureThreshold: 5
        restartPolicy: Always
        volumes:
        - configMap:
            name: transactions-configuration
          name: config-volume
        - secret:
            secretName: default-server-keystore
          name: default-server-keystore-volume
        - secret:
            secretName: sni-server-keystore
          name: sni-server-keystore-volume
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      environment: infrastructure
      project: infinispan
      version: 9.0.0.CR2
    name: transactions-repository
  spec:
    ports:
    - name: port-1
      port: 8181
      protocol: TCP
      targetPort: 8181
    - name: port-2
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: port-3
      port: 9990
      protocol: TCP
      targetPort: 9990
    - name: port-4
      port: 11211
      protocol: TCP
      targetPort: 11211
    - name: port-5
      port: 11222
      protocol: TCP
      targetPort: 11222
    - name: port-6
      port: 57600
      protocol: TCP
      targetPort: 57600
    - name: port-7
      port: 7600
      protocol: TCP
      targetPort: 7600
    - name: port-8
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      environment: infrastructure
      project: infinispan
      version: 9.0.0.CR2
    sessionAffinity: None
    type: LoadBalancer
- apiVersion: v1
  kind: Route
  metadata:
    name: transactions-repository-1
  spec:
    host: transactions-repository-1-myproject.192.168.0.17.nip.io
    port:
      targetPort: port-5
    tls:
      termination: passthrough
    to:
      kind: Service
      name: transactions-repository
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-03-07T11:38:25Z
        status: "True"
        type: Admitted
      host: transactions-repository-1-myproject.192.168.0.17.nip.io
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    name: transactions-repository-2
  spec:
    host: transactions-repository-2-myproject.192.168.0.17.nip.io
    port:
      targetPort: port-5
    tls:
      termination: passthrough
    to:
      kind: Service
      name: transactions-repository
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-03-07T11:38:25Z
        status: "True"
        type: Admitted
      host: transactions-repository-2-myproject.192.168.0.17.nip.io
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    name: transactions-repository-3
  spec:
    host: transactions-repository-3-myproject.192.168.0.17.nip.io
    port:
      targetPort: port-5
    tls:
      termination: passthrough
    to:
      kind: Service
      name: transactions-repository
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-03-07T11:38:25Z
        status: "True"
        type: Admitted
      host: transactions-repository-3-myproject.192.168.0.17.nip.io
      routerName: router
      wildcardPolicy: None
